--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.navbar-fixed {
+	@apply fixed z-50;
+	box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
+}
+
+.underline-hover-sm {
+	@apply mx-8 block w-0 group-hover:w-16 transition-all duration-500 h-0.5 bg-primary;
+}
+
+.underline-hover-lg {
+	@apply lg:mx-auto block w-0 lg:group-hover:w-2/5 transition-all duration-500 h-0.5 bg-primary;
+}
+
+.list-navbar {
+	@apply text-base font-semibold py-2 mx-8 lg:mx-6 group-hover:text-primary group-hover:font-bold flex;
+}
+
+.btn-navbar {
+	@apply text-base font-semibold py-2 px-5 mx-3 flex bg-primary rounded-full text-white justify-center hover:bg-white hover:text-primary hover:shadow-md hover:border hover:border-primary transition duration-300;
+}
+
+.hamburger-line {
+	@apply block w-[30px] h-[2px] my-2 bg-black;
+}
+
+.hamburger-active > span:nth-child(1) {
+	@apply rotate-45;
+}
+
+.hamburger-active > span:nth-child(2) {
+	@apply scale-0;
+}
+
+.hamburger-active > span:nth-child(3) {
+	@apply -rotate-45;
+}
